<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow android:layout_width="match_parent">
            <TextView
                android:textStyle="bold"
                android:text="@string/header_info"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/device_number"/>
            <TextView
                android:text="@string/notData"
                android:id="@+id/device_number"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/device_version_hard"/>
            <TextView
                android:text="@string/notData"
                android:id="@+id/device_version_hard"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/device_version_soft"/>
            <TextView
                android:text="@string/notData"
                android:id="@+id/device_version_soft"/>
        </TableRow>
        <TableRow android:layout_width="match_parent">
            <TextView
                android:textStyle="bold"
                android:text="@string/header_status"/>
        </TableRow>
            <TableRow>
                <TextView android:text="@string/device_chanel"/>
                <TextView
                    android:text="@string/notData"
                    android:id="@+id/device_chanel"/>
            </TableRow>
            <TableRow>
                <TextView android:text="@string/device_status_pbs"/>
                <TextView
                    android:text="@string/notData"
                    android:id="@+id/device_status_pbs"/>
            </TableRow>
            <TableRow>
                <TextView android:text="@string/device_status_gps"/>
                <TextView
                    android:text="@string/notData"
                    android:id="@+id/device_status_gps"/>
            </TableRow>
            <TableRow>
                <TextView android:text="@string/device_status_pspd"/>
                <TextView
                    android:text="@string/notData"
                    android:id="@+id/device_status_pspd"/>
            </TableRow>
        <TableRow>
            <TextView android:text="@string/device_power"/>
            <TextView
                android:text="@string/notData"
                android:id="@+id/device_power"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/device_memory"/>
            <TextView
                android:text="@string/notData"
                android:id="@+id/device_memory"/>
        </TableRow>
        <TableRow android:layout_width="match_parent">
            <TextView
                android:textStyle="bold"
                android:text="@string/header_time"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/satelite_GPS"/>
            <TextView
                android:text="@string/notData"
                android:id="@+id/satelite_GPS"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/time_RTC"/>
            <TextView
                android:text="@string/notData"
                android:id="@+id/time_RTC"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/time_GPS"/>
            <TextView
                android:text="@string/notData"
                android:id="@+id/time_GPS"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/time_System"/>
            <TextView
                android:text="@string/notData"
                android:id="@+id/time_System"/>
        </TableRow>
    </TableLayout>
</ScrollView>