<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/btn"
                android:text="@string/tech_base"
                android:id="@+id/tech_base"/>
            <Button
                style="@style/btn"
                android:text="@string/tech_send_statistic"
                android:id="@+id/tech_send_statistic"/>

        </LinearLayout>
        <TableLayout
            android:stretchColumns="*"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_zero_time"
                    android:id="@+id/tech_time_1"/>
                <TextView
                    style="@style/vt_table_bold"
                    android:text="@string/tech_rezim"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/not_data"
                    android:id="@+id/tech_rezim"/>
                <TextView
                    style="@style/vt_table_bold"
                    android:text="@string/tech_PK"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/short_not_data"
                    android:id="@+id/tech_PK"/>
                <TextView
                    style="@style/vt_table_bold"
                    android:text="@string/tech_CK"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/short_not_data"
                    android:id="@+id/tech_CK"/>
                <TextView
                    style="@style/vt_table_bold"
                    android:text="@string/tech_NK"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/short_not_data"
                    android:id="@+id/tech_NK"/>
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_zero_time"
                    android:id="@+id/tech_time_2"/>
                <TextView
                    style="@style/vt_table_bold"
                    android:text="@string/tech_device"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/not_data"
                    android:id="@+id/tech_device"/>
                <TextView
                    style="@style/vt_table_bold"
                    android:text="@string/tech_Trezim"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/short_not_data"
                    android:id="@+id/tech_Trezim"/>
                <TextView
                    style="@style/vt_table_bold"
                    android:text="@string/tech_status"/>

                <TextView
                    android:id="@+id/tech_status"
                    style="@style/vt_table"
                    android:text="@string/not_data" />
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_zero_time"
                    android:id="@+id/tech_time_3"/>
                <TextView
                    style="@style/vt_table_bold"
                    android:text="@string/tech_switch"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/not_data"
                    android:id="@+id/tech_switch"/>
                <TextView
                    style="@style/vt_table_bold"
                    android:text="@string/tech_ftu"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/short_not_data"
                    android:id="@+id/tech_ftu"/>
                <TextView
                    style="@style/vt_table_bold"
                    android:text="@string/tech_fts"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/not_data"
                    android:id="@+id/tech_fts" />
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/blanck"/>
                <TextView
                    style="@style/vt_table_bold"
                    android:text="@string/tech_tcycle"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/not_data"
                    android:id="@+id/tech_tcycle"/>
                <TextView
                    style="@style/vt_table_bold"
                    android:text="@string/tech_tstart"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/short_not_data"
                    android:id="@+id/tech_tstart"/>
                <TextView
                    style="@style/vt_table_bold"
                    android:text="@string/tech_ttek"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/short_not_data"
                    android:id="@+id/tech_ttek"/>
                <TextView
                    style="@style/vt_table_bold"
                    android:text="@string/tech_tnext"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/short_not_data"
                    android:id="@+id/tech_tnext"/>
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_zero_time"
                    android:id="@+id/tech_time_4"/>
                <TextView
                    style="@style/vt_table_bold"
                    android:text="@string/tech_tvp"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_ring1"
                    android:id="@+id/tech_ring1"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_ring2"
                    android:id="@+id/tech_ring2"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_broken1"
                    android:id="@+id/tech_broken1"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_broken2"
                    android:id="@+id/tech_broken2"/>
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_zero_time"
                    android:id="@+id/tech_time_5"/>
                <TextView
                    style="@style/vt_table_bold"
                    android:text="@string/tech_inputs"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_tvp1"
                    android:id="@+id/tech_tvp1"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_tvp2"
                    android:id="@+id/tech_tvp2"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_elblink"
                    android:id="@+id/tech_elblink"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_os"
                    android:id="@+id/tech_os"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_stress"
                    android:id="@+id/tech_stress"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_input"
                    android:id="@+id/tech_input"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_power"
                    android:id="@+id/tech_power"/>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_door"
                    android:id="@+id/tech_door"/>
            </TableRow>
        </TableLayout>
        <TableLayout
            android:stretchColumns="*"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_zero_time"
                    android:id="@+id/tech_time_6"/>
                <TextView
                    style="@style/vt_table_bold"
                    android:text="@string/tech_censors"/>
                <TextView
                    style="@style/vt_table"
                    android:text="01"
                    android:id="@+id/tech_01"/>
                <TextView
                    style="@style/vt_table"
                    android:text="02"
                    android:id="@+id/tech_02"/>
                <TextView
                    style="@style/vt_table"
                    android:text="03"
                    android:id="@+id/tech_03"/>
                <TextView
                    style="@style/vt_table"
                    android:text="04"
                    android:id="@+id/tech_04"/>
                <TextView
                    style="@style/vt_table"
                    android:text="05"
                    android:id="@+id/tech_05"/>
                <TextView
                    style="@style/vt_table"
                    android:text="06"
                    android:id="@+id/tech_06"/>
                <TextView
                    style="@style/vt_table"
                    android:text="07"
                    android:id="@+id/tech_07"/>
                <TextView
                    style="@style/vt_table"
                    android:text="08"
                    android:id="@+id/tech_08"/>
                <TextView
                    style="@style/vt_table"
                    android:text="09"
                    android:id="@+id/tech_09"/>
                <TextView
                    style="@style/vt_table"
                    android:text="10"
                    android:id="@+id/tech_10"/>
                <TextView
                    style="@style/vt_table"
                    android:text="11"
                    android:id="@+id/tech_11"/>
                <TextView
                    style="@style/vt_table"
                    android:text="12"
                    android:id="@+id/tech_12"/>
                <TextView
                    style="@style/vt_table"
                    android:text="13"
                    android:id="@+id/tech_13"/>
                <TextView
                    style="@style/vt_table"
                    android:text="14"
                    android:id="@+id/tech_14"/>
                <TextView
                    style="@style/vt_table"
                    android:text="15"
                    android:id="@+id/tech_15"/>
                <TextView
                    style="@style/vt_table"
                    android:text="16"
                    android:id="@+id/tech_16"/>
            </TableRow>
        </TableLayout>
        <TableLayout
            android:stretchColumns="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_zero_time"
                    android:id="@+id/tech_time_7"/>
                <TextView
                    android:paddingLeft="20dp"
                    style="@style/vt_table_bold"
                    android:text="@string/tech_countts"/>
                <TextView
                    android:paddingLeft="50dp"
                    style="@style/vt_table"
                    android:text="@string/not_data"
                    android:id="@+id/tech_countts"/>
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/vt_table"
                    android:text="@string/tech_zero_time"
                    android:id="@+id/tech_time_8"/>
                <TextView
                    android:paddingLeft="20dp"
                    style="@style/vt_table_bold"
                    android:text="@string/tech_statistic"/>
                <TextView
                    android:paddingLeft="50dp"
                    style="@style/vt_table"
                    android:text="@string/not_data"
                    android:id="@+id/tech_statistic"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>